test/elaboration/bad/coreml_missed_field_in_record.mle
type t = { a : int ; b : int }
let (x : t) = { a = 2 }[]
